Fjerne java preview feature